# kayiver

./: .gitignore  Cargo.toml  LICENSE  README.md  STATUS.md
.github/: FUNDING.yml
apps/android/: README.md  gradle.properties  settings.gradle.kts
apps/android/app/: build.gradle.kts
apps/android/app/src/main/: AndroidManifest.xml
apps/android/app/src/main/java/app/kayiver/remote/: MainActivity.kt
apps/drift/: Cargo.toml
apps/drift/src/: autostart.rs  main.rs
apps/drift/src/engine/: client.rs  host.rs  mod.rs  pairing.rs
apps/drift/src/platform/: macos.rs  mod.rs  stub.rs  tray_windows.rs  windows.rs
apps/drift/src/ui/: index.html  mod.rs
apps/kayiver/: Cargo.toml  build.rs
apps/kayiver/src/: android.rs  autostart.rs  gui.rs  keymap.rs  main.rs
apps/kayiver/src/engine/: client.rs  clipsync.rs  host.rs  mod.rs  pairing.rs
apps/kayiver/src/platform/: macos.rs  mod.rs  passive_windows.rs  sim.rs  stub.rs  tray_windows.rs  windows.rs
apps/kayiver/src/ui/: index.html  mod.rs
apps/kayiver/tests/: sim_e2e.rs
assets/icons/: Kayiver.icns
crates/drift-core/: Cargo.toml
crates/drift-core/src/: config.rs  discovery.rs  layout.rs  lib.rs  pairing.rs  proto.rs
crates/kayiver-core/: Cargo.toml
crates/kayiver-core/src/: config.rs  discovery.rs  layout.rs  lib.rs  pairing.rs  proto.rs  secure.rs  wire.rs
docs/: ARCHITECTURE.md  BRANDING.md  PLATFORMS.md  PROTOCOL.md  ROADMAP.md  SECURITY.md  TESTING.md  index.html
packaging/macos/: build-app.sh
scripts/: deploy-mac.sh  gen-icons.sh
site/: index.html
