[workspace]
resolver = "2"
members = ["crates/drift-core", "apps/drift"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/yusufani/drift"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"

# mingw cross-compilation from macOS/Linux: `cargo build --release --target x86_64-pc-windows-gnu`
