[package]
name = "kayiver"
description = "kayiver: a lightweight, open-source software KVM — share one keyboard and mouse across macOS, Windows (and soon Android)"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "kayiver"
path = "src/main.rs"

[dependencies]
kayiver-core = { path = "../../crates/kayiver-core" }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "6"
serde_json = "1"
if-addrs = "0.15.0"

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.62"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_HiDpi",
    "Win32_UI_Shell",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_StationsAndDesktops",
    "Win32_System_RemoteDesktop",
    "Win32_System_Threading",
    "Win32_System_Environment",
    "Win32_Security",
    "Win32_Devices_Display",
]

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"
objc2-app-kit = "0.3.2"
objc2-foundation = "0.3.2"
png = "0.18.1"
tao = "0.35.3"
tray-icon = "0.24.1"
wry = "0.55.1"

[build-dependencies]
winres = "0.1.12"
