[package]
name = "kayiver-core"
description = "Platform-agnostic core for kayiver: protocol, layout, pairing, secure transport, discovery"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
postcard = { version = "1", features = ["alloc", "use-std"] }
tokio = { version = "1", features = ["net", "rt", "io-util", "sync", "time", "macros"] }
# default-features off: avoids the `ring` C dependency (pure-Rust crypto only),
# which keeps cross-compilation trivial on every platform.
snow = { version = "0.10", default-features = false, features = [
    "default-resolver",
    "use-curve25519",
    "use-chacha20poly1305",
    "use-blake2",
    "use-getrandom",
] }
spake2 = "0.4"
sha2 = "0.10"
rand = "0.9"
mdns-sd = "0.13"
toml = "0.8"
dirs = "6"
base64 = "0.22"
thiserror = "2"
tracing = "0.1"
gethostname = "1"
